laporan_error.txt
=== PENYEBAB UTAMA MANIFEST MERGER GAGAL ===
> Task :app:createDebugCompatibleScreenManifests
> Task :app:extractDeepLinksDebug
> Task :app:parseDebugLocalResources
> Task :app:processDebugMainManifest
> Task :app:processDebugManifest
> Task :app:mergeDebugShaders
> Task :app:compileDebugShaders NO-SOURCE
> Task :app:generateDebugAssets UP-TO-DATE
> Task :app:mergeDebugAssets
> Task :app:compressDebugAssets
> Task :app:processDebugManifestForPackage
> Task :app:processDebugJavaRes NO-SOURCE
> Task :app:processDebugResources
> Task :app:mergeDebugJavaResource

> Task :app:compileDebugJavaWithJavac
/home/runner/work/NovaAgen.v2/NovaAgen.v2/app/src/main/java/com/novaagent/app/infrastructure/injector/SystemActionInjector.java:48: error: cannot find symbol
                success = service.typeTextInFocusedNode(cmd.textToType);
                                                           ^
  symbol:   variable textToType
  location: variable cmd of type ActionCommandDto
/home/runner/work/NovaAgen.v2/NovaAgen.v2/app/src/main/java/com/novaagent/app/infrastructure/injector/SystemActionInjector.java:53: error: cannot find symbol
                if ("quick_settings".equals(cmd.globalAction)) success = service.performGlobalAction(AccessibilityService.GLOBAL_ACTION_QUICK_SETTINGS);
                                               ^
  symbol:   variable globalAction
  location: variable cmd of type ActionCommandDto
/home/runner/work/NovaAgen.v2/NovaAgen.v2/app/src/main/java/com/novaagent/app/infrastructure/injector/SystemActionInjector.java:54: error: cannot find symbol
                else if ("home".equals(cmd.globalAction)) success = service.performGlobalAction(AccessibilityService.GLOBAL_ACTION_HOME);
                                          ^
  symbol:   variable globalAction
  location: variable cmd of type ActionCommandDto
